knexsol/knexsol.v0.1.1.max.css
@import url("https://fonts.googleapis.com/css?family=Sunflower:300");

    
body {
    font-family: 'Sunflower', sans-serif !important;
    background: url(https://3.bp.blogspot.com/-g9pNQwzW4ZY/Wy4b-ihGaXI/AAAAAAAABa4/QBOBWit8eEgWFwhYt76YephGp3Zh2wpKACLcBGAs/s1600/laptop-1209008.jpg) no-repeat;
    background-size: cover;
    background-attachment: fixed;
    overflow-x: hidden;
}

#exam-page {
    background: none;
}

ul {
    padding: 0;
    margin: 0;
    margin-bottom: 0;
    list-style: none;
}

.widget .post-body ul {
    padding: 0;
}

#comments,
.comments {
    margin-top: 100px;
}
/*
*  Hide Things
*/
#footer-1,
#HTML1 {
    display: none !important;
}

/***********************************************
* COMMON UTILITY CLASSES STARTS HERE
************************************************/
.margin-top-15 {
    margin-top: 15px !important;
}
.margin-top-20 {
    margin-top: 20px;
}
.margin-top-30 {
    margin-top: 20px;
}
.anchor-cover {
    display: block;
    height: 100%;
    color: #fff;
}
.anchor-cover:hover {
    color: #fff;
    text-decoration: none;
}
.coming-soon-tag {
    position: absolute;
    top: 85px;
    left: -22px;
    font-size: 15px;
    background: rgb(255, 255, 0);
    background: rgba(255, 255, 0, 0.7);
    color: #000;
    padding: 2px 40px;
    transform: rotate(-45deg);
    transform-origin: left;
}
.btn.btn-transparent {
    background: transparent;
    border-color: #fff;
    color: #fff 
}
.btn.btn-highlight {
    background: #ffff13;
    border-color: #ffff13;
    color: #000; 
}
.text-ico {
    font-size: 40px;
    font-weight: bold;
    font-style: normal;
}
.text-ico-c::after {
    content: "C"
}
.text-ico-cpp::after {
    content: "C++"
}
.text-ico-csharp::after {
    content: "C#"
}
.text-ico-v-x::after {
    content: "V-X"
}
.text-ico-x-xii::after {
    content: "X-XII"
}
.text-ico-ug::after {
    content: "UG"
}

.color-combo,
.color-combo2 {
    color: #fff;
}

.color-combo:nth-child(8n+1) {
    background: rgb(0, 130, 153);
    background: rgba(0, 130, 153, .8);
}
.color-combo:nth-child(8n+2) {
    background: rgb(38, 114, 236);
    background: rgba(38, 114, 236, .8);
}
.color-combo:nth-child(8n+3) {
    background: rgb(140, 0, 149);
    background: rgba(140, 0, 149, .8);
}
.color-combo:nth-child(8n+4) {
    background: rgb(81, 51, 171);
    background: rgba(81, 51, 171, 0.8);
}
.color-combo:nth-child(8n+5) {
    background: rgb(172, 25, 61);
    background: rgba(172, 25, 61, 0.8);
}
.color-combo:nth-child(8n+6) {
    background: rgb(210, 71, 38);
    background: rgba(210, 71, 38, 0.8);
}
.color-combo:nth-child(8n+7) {
    background: rgb(0, 138, 0);
    background: rgba(0, 138, 0, 0.8);
}
.color-combo:nth-child(8n+8) {
    background: rgb(9, 74, 178);
    background: rgba(9, 74, 178, 0.8);
}

.color-combo2:nth-child(10n+1) {
    background: rgb(110, 142, 14);
    background: rgba(110, 142, 14, 0.8);
}

.color-combo2:nth-child(10n+2) {
    background: rgb(74, 59, 146);
    background: rgba(74, 59, 146, 0.8);
}

.color-combo2:nth-child(10n+3) {
    background: rgb(37, 114, 235);
    background: rgba(37, 114, 235, 0.8);
}

.color-combo2:nth-child(10n+4) {
    background: rgb(173, 16, 60);
    background: rgba(173, 16, 60, 0.8);
}

.color-combo2:nth-child(10n+5) {
    background: rgb(99, 47, 0);
    background: rgba(99, 47, 0, 0.8);
}

.color-combo2:nth-child(10n+6) {
    background: rgb(176, 30, 0);
    background: rgba(176, 30, 0, 0.8);
}

.color-combo2:nth-child(10n+7) {
    background: rgb(193, 0, 79);
    background: rgba(193, 0, 79, 0.8);
}

.color-combo2:nth-child(10n+8) {
    background: rgb(114, 0, 172);
    background: rgba(114, 0, 172, 0.8);
}

.color-combo2:nth-child(10n+9) {
    background: rgb(70, 23, 180);
    background: rgba(70, 23, 180, 0.8);
}

.color-combo2:nth-child(10n+10) {
    background: rgb(255, 179, 0);
    background: rgba(255, 179, 0, 0.8);
}

.mini-card {
    position: relative;
    height: 150px;
    text-align: center;
    cursor: pointer;
    padding-top: 40px !important;
    transition: all .2s ease-out;
    overflow: hidden;
}
.mini-card:hover .inner-container {
    transform: scale(1.1, 1.1);
}
.mini-card .title {
    font-size: 25px;
}
.mini-card .text-ico + .title {
    margin-top: -8px;
}
.mini-card .sub-title {
    font-size: 18px;
}
.mini-card .icon {
    font-size: 50px;
    color: #fff !important;
    text-decoration: none !important;
}
.mini-card .text-ico {
    font-size: 40px;
    color: #fff !important;
    text-decoration: none !important;
}

/***** COMMON UTILITY CLASSES ENDS HERE *****/

.knexsol-header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background: rgba(0,0,0,.8);
    height: 100px;
    z-index: 99999;
    color: #fff;
    transition: all .4s ease-out;
    /*box-shadow: inset 0px -4px 4px 0px #1a348a;*/
}

.knexsol-header .logo-img {
    height: 80px;
    margin: 10px 10px;   
}

.knexsol-header .logo-ball-img,
.header-collapse .knexsol-header .logo-img {
    display: none;
}

.header-collapse .knexsol-header {
    height: 50px;
    background: #000;
    background: rgba(0,0,0,.8);
}

.header-collapse .knexsol-header .logo-ball-img {
    display: inline-block;
}

.knexsol-header .mobile-menu-toggle {
    right: 0;
    bottom: 0;
    font-size: 30px;
    padding: 10px 15px;
    position: absolute;
    display: none;
}

.knexsol-header .top-menu {
    position: absolute;
    list-style: none;
    bottom: 1px;
    right: 15px;
    margin-bottom: 0;
}        

.knexsol-header .top-menu li.level-1 {
    display: inline-block;
    float: left;
}

.knexsol-header .top-menu li.level-1.active {
    /*box-shadow: 0px -4px 4px 0px #1a348a;*/
}

.knexsol-header .top-menu li.level-1 a {
    display: block;
    padding: 3px 15px;
    color: #fff;
    font-size: 18px;
    /* font-weight: bold; */
    text-decoration: none !important;
    border-bottom: 5px solid transparent;
}

.knexsol-header .top-menu li.level-1.active a {
    border-color: #ffffe0;
}
/* ... */

